# kontour

./: .gitignore  Cargo.toml  README.md  build_release_package.sh  config-kent.toml  config.toml
.github/workflows/: release.yml
data-cleaning/: 01_basic_format_pass.py  02_build_condensed_dataset.py  03_qlora_finetune_13b.sh  03_qlora_finetune_33b.sh  03_qlora_finetune_7b.sh  kent-merged-dataset.jsonl
samples/: summary.md
src/: config.rs  main.rs
