[package]
name = "kontour"
version = "1.0.0"
edition = "2021"
authors = ["Timothy Bogdala <tdb@animal-machine.com>"]
description = "A utility to query an LLM API and generate sample responses for testing."


[dependencies]
chrono = "0.4.26"
clap = "4.3.11"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
simple_logger = "4.2.0"
toml = "0.7.6"
